Fix issue with typeahead results not showing.
The result <ul> is no longer appended to the body, but added as a sibling to the <input> elemnet.
Since this is part of an <div class="input-append">…</div>, it was styled with font-size: 0;

--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -71,6 +71,8 @@ figure {
 }
 
 .dropdown-menu.typeahead {
+  font-size: @baseFontSize;
+  line-height: @baseLineHeight;
   padding: 0;
   a img {
     margin: 0 10px 0 -5px;
